--- a/Awv.Automation.Generation/Awv.Automation.Generation.csproj
+++ b/Awv.Automation.Generation/Awv.Automation.Generation.csproj
@@ -7,6 +7,10 @@
     <PackageProjectUrl>https://github.com/aerawave/Awv.Automation</PackageProjectUrl>
     <Authors>Joshua Kinzer</Authors>
     <Company>Aerawave</Company>
+    <Description>Used as a foundation for randomly generated objects and values.</Description>
+    <PackageReleaseNotes>Used as a foundation for randomly generated objects and values.</PackageReleaseNotes>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
 </Project>
