--- a/Awv.Automation.Lexica/Awv.Automation.Lexica.csproj
+++ b/Awv.Automation.Lexica/Awv.Automation.Lexica.csproj
@@ -7,6 +7,10 @@
     <PackageProjectUrl>https://github.com/aerawave/Awv.Automation</PackageProjectUrl>
     <RepositoryUrl>https://github.com/aerawave/Awv.Automation</RepositoryUrl>
     <PackageTags>aerawave</PackageTags>
+    <Description>Essentially an extension to the Awv.Lexica library which adds some more customized modifications to it that suit the needs of the Awv.Automation set of libraries.</Description>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <FileVersion>1.0.1.0</FileVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
