--- a/Awv.Automation.SocialMedia/Awv.Automation.SocialMedia.csproj
+++ b/Awv.Automation.SocialMedia/Awv.Automation.SocialMedia.csproj
@@ -19,6 +19,7 @@ Added Facebook support.</PackageReleaseNotes>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0006" />
+    <PackageReference Include="TweetMoaSharp" Version="6.0.2" />
   </ItemGroup>
 
 </Project>
