--- a/Awv.Automation.SocialMedia/Awv.Automation.SocialMedia.csproj
+++ b/Awv.Automation.SocialMedia/Awv.Automation.SocialMedia.csproj
@@ -6,14 +6,12 @@
     <Company>Aerawave</Company>
     <Product>Awv.Automation.SocialMedia</Product>
     <Description>Used to automate posts to various social media platforms. Includes: Facebook</Description>
-    <PackageReleaseNotes>Initial release.
-
-Added Facebook support.</PackageReleaseNotes>
+    <PackageReleaseNotes>Added Twitter support.</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/aerawave/Awv.Automation</PackageProjectUrl>
     <RepositoryUrl>https://github.com/aerawave/Awv.Automation</RepositoryUrl>
-    <AssemblyVersion>1.0.1.0</AssemblyVersion>
-    <FileVersion>1.0.1.0</FileVersion>
-    <Version>1.0.1</Version>
+    <AssemblyVersion>1.0.2.0</AssemblyVersion>
+    <FileVersion>1.0.2.0</FileVersion>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
